{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 20,
  "lineage": "f4a37fab-220f-9a5a-d6ee-ab3d5279f34b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.196.227.11",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-10-18T16:01:15.248-07:00",
            "id": "projects/sysadmin-work-test-292709/regions/us-east1/addresses/sysadmin-app-sysadmin-env-nap-ip",
            "name": "sysadmin-app-sysadmin-env-nap-ip",
            "network_tier": "PREMIUM",
            "project": "sysadmin-work-test-292709",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/addresses/sysadmin-app-sysadmin-env-nap-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/zones/us-east1-b/instanceGroups/sysadmin-app-sysadmin-env-vm-group",
                "max_rate_per_instance": 100,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-10-18T16:02:08.600-07:00",
            "enable_cdn": false,
            "fingerprint": "AeQUO2S0XPw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/healthChecks/sysadmin-app-sysadmin-env-healthcheck"
            ],
            "id": "projects/sysadmin-work-test-292709/global/backendServices/sysadmin-app-sysadmin-env-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sysadmin-app-sysadmin-env-backend-service",
            "port_name": "http",
            "project": "sysadmin-work-test-292709",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/backendServices/sysadmin-app-sysadmin-env-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T16:01:27.699-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-http",
            "log_config": [],
            "name": "sysadmin-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T16:01:27.600-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-https",
            "log_config": [],
            "name": "sysadmin-app-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-10-18T16:01:27.696-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-sysadmin-env-fw-allow-internal",
            "log_config": [],
            "name": "sysadmin-app-sysadmin-env-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-sysadmin-env-fw-allow-internal",
            "source_ranges": [
              "192.168.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T16:01:27.650-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-rdp",
            "log_config": [],
            "name": "sysadmin-app-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T16:01:27.602-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-ssh",
            "log_config": [],
            "name": "sysadmin-app-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "priority": 1000,
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/firewalls/sysadmin-app-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sysadmin-work-test-292709/global/forwardingRules/sysadmin-app-sysadmin-env-global-forwarding-rule",
            "ip_address": "34.120.51.125",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sysadmin-app-sysadmin-env-global-forwarding-rule",
            "port_range": "80-80",
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/forwardingRules/sysadmin-app-sysadmin-env-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/targetHttpProxies/sysadmin-app-sysadmin-env-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "name": "sysadmin-app-sysadmin-env-vpc",
            "project": "sysadmin-work-test-292709",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T16:01:27.736-07:00",
            "id": "projects/sysadmin-work-test-292709/regions/us-east1/routers/sysadmin-app-sysadmin-env-nat-router",
            "name": "sysadmin-app-sysadmin-env-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "project": "sysadmin-work-test-292709",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/routers/sysadmin-app-sysadmin-env-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "sysadmin-work-test-292709/us-east1/sysadmin-app-sysadmin-env-nat-router/sysadmin-app-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "sysadmin-app-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/addresses/sysadmin-app-sysadmin-env-nap-ip"
            ],
            "project": "sysadmin-work-test-292709",
            "router": "sysadmin-app-sysadmin-env-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T16:01:28.060-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/sysadmin-work-test-292709/regions/us-east1/subnetworks/sysadmin-app-sysadmin-env-private-subnet-1",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "sysadmin-app-sysadmin-env-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/networks/sysadmin-app-sysadmin-env-vpc",
            "private_ip_google_access": false,
            "project": "sysadmin-work-test-292709",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/regions/us-east1/subnetworks/sysadmin-app-sysadmin-env-private-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T16:02:25.139-07:00",
            "id": "projects/sysadmin-work-test-292709/global/targetHttpProxies/sysadmin-app-sysadmin-env-proxy",
            "name": "sysadmin-app-sysadmin-env-proxy",
            "project": "sysadmin-work-test-292709",
            "proxy_id": 1560260538747942766,
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/targetHttpProxies/sysadmin-app-sysadmin-env-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/urlMaps/sysadmin-app-sysadmin-env-load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T16:02:12.633-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/backendServices/sysadmin-app-sysadmin-env-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "gXC7IULnpdM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sysadmin-work-test-292709/global/urlMaps/sysadmin-app-sysadmin-env-load-balancer",
            "map_id": 1199025425190320027,
            "name": "sysadmin-app-sysadmin-env-load-balancer",
            "path_matcher": [],
            "project": "sysadmin-work-test-292709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sysadmin-work-test-292709/global/urlMaps/sysadmin-app-sysadmin-env-load-balancer",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    }
  ]
}